[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostdiffad"
version = "0.1.0"
description = "Normality-Oriented Semantic-Topology Score Diffusion for Visual Anomaly Detection"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "tqdm>=4.64",
]

[project.optional-dependencies]
vfm = [
  "timm>=0.9",
  "transformers>=4.40",
]
masks = [
  "segment-anything>=1.0",
  "opencv-python-headless>=4.8",
]
dev = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
